using System.Collections;
using System.Collections.Generic;
using UnityEngine;


    public class Constants
    {
        public const string ANIM_RUN = "run";
        public const string ANIM_IDLE = "idle";
        public const string ANIM_DANCE = "dance";
        public const string ANIM_ATTACK = "attack";
        public const string ANIM_DIE = "die";
        public const string ANIM_ULTI = "ulti";

    public const string TAG_BOT = "Bot";
    public const string TAG_PLAYER = "Player";
    public const string TAG_GROUND = "Ground";

    public static readonly string selectStringBtn = "Select";
    public static readonly string equipedStringBtn = "Equiped";

}
